# IISc_data_collection

./: .gitignore  README.md  data_collection.sh  folder_recording.py  gstreamer_recording.sh  multi_camera_recorder.py  new_data_collection.py  recording.py  svo_recording.py
Monocam_ros_ws/launch/: monocamera_launch.py
flo_data_collection/: README.md  flo_data_collection.sh  rosbag_with_depth.sh
flo_data_collection/flo_driver/: CMakeLists.txt  package.xml
flo_data_collection/flo_driver/config/: config.yaml
flo_data_collection/flo_driver/flo_driver/: flo_base_diff.py  flysky_controller.py  nmea_topic_driver.py  ntrip.py  oakd.py  ps4_controller.py  ps4_controller_utils.py  serial_port_read.py
flo_data_collection/flo_driver/launch/: cam_launch.py  new_launch.py
flo_data_collection/flo_driver/src/: serial_port.cpp
flo_data_collection/flo_msgs/: CMakeLists.txt  package.xml
flo_data_collection/flo_msgs/action/: InplaceRotate.action  Path.action  PathMission.action  Waypoint.action  WaypointMission.action
flo_data_collection/flo_msgs/msg/: ClockFrequency.msg  FlySky.msg  Gamepad.msg  Governor.msg  JointCmd.msg  JointState.msg  LteInfo.msg  NmeaGGA.msg  NmeaGLL.msg  NmeaGSA.msg  NmeaGSV.msg  NmeaRMC.msg  NmeaVTG.msg  OakdUsage.msg  OccupancyGrid.msg  Perf.msg  PingResult.msg  Pose2D.msg  Ps4ControllerStatus.msg  RobotCalibrationStatus.msg  S3UploadStatus.msg  ThermalZone.msg  Voltage.msg
flo_data_collection/flo_msgs/srv/: BookTeleopSession.srv  EnableUploading.srv  GetAnnotationStatus.srv  GetRobotPose.srv  GetSimId.srv  SetPs4ControllerLed.srv  SetPs4ControllerLedFlash.srv  StartLogging.srv  StartRecordingPath.srv  StartRobotCalibration.srv  StopRecordingPath.srv  UpdateUploadParams.srv  VibratePs4Controller.srv
flo_data_collection/flo_utils/: CMakeLists.txt  package.xml
flo_data_collection/flo_utils/flo_utils/: annotate_cmdvel.py  joystick.py  ntrip_client.py  path_client.py  record_path.py  ros2_utils.py  rtcm_parser.py  s3_uploader.py  utils.py  waypoint_mission_client.py
flo_data_collection/flo_utils/flo_utils/monitors/: internet_connectivity_monitor.py  lte_monitor.py  perf_monitor.py  rosout_monitor.py  rtcm_monitor.py
flo_data_collection/rviz/: view_raw.rviz
src/Monocam_ros_ws/: CMakeLists.txt  README.md  package.xml
src/Monocam_ros_ws/config/: monocamera_rviz.rviz
src/Monocam_ros_ws/launch/: monocamera_launch.py  single_camera_launch.py
src/Monocam_ros_ws/scripts/: camera_info_publisher.py
src/rslidar_sdk/: CMakeLists.txt
src/rslidar_sdk/config/: config.yaml
src/rslidar_sdk/launch/: start.py
src/zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml  zed2i.yaml
src/zed-ros2-wrapper/zed_wrapper/launch/: dual_zed_cameras.launch.py  new.launch.py
