<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flo_driver</name>
  <version>0.0.0</version>
  <description>Contains drivers for sensor, actuators, etc...</description>
  <maintainer email="clay@flomobility.com">Clay Motupalli</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-opencv</depend>
  <depend>python3-depthai-pip</depend>
  <depend>python3-pynmea2</depend>
  <depend>python3-pytest</depend>
  <depend>flo_msgs</depend>
  <depend>flo_utils</depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
