<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flo_utils</name>
  <version>0.0.0</version>
  <description>Utilities for flo navigation stack</description>
  <maintainer email="clay@flomobility.com">Clay Motupalli</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pygame</depend>
  <depend>python3-boto3</depend>
  <depend>flo_msgs</depend>
  
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
